admin page fixed
admin page fixed

--- a/admin.html
+++ b/admin.html
@@ -538,7 +538,7 @@
                 <button class="nav-tab" data-tab="tenants">🏢 Tenants & Agents</button>
                 <button class="nav-tab" data-tab="users">👥 Users</button>
                 <button class="nav-tab" data-tab="analytics">📈 Analytics</button>
-                <button class="nav-tab" data-tab="settings"⚙️ Settings</button>
+                <button class="nav-tab" data-tab="settings">⚙️ Settings</button>
             </div>
 
             <!-- Dashboard Panel -->
