--- a/static/chat.html
+++ b/static/chat.html
@@ -3,19 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chatbot</title>
+    <title>Chat</title>
     <style>
-        body, html { height: 100%; margin: 0; }
+        body, html {height:100%;margin:0;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;}
+        .wrapper{display:flex;height:100%;}
+        #history{width:250px;border-right:1px solid #ddd;overflow-y:auto;padding:10px;}
+        #widget{flex:1;position:relative;}
+        #history h3{margin-bottom:10px;font-size:16px;}
+        #history div{padding:4px 0;border-bottom:1px solid #eee;font-size:14px;}
     </style>
 </head>
 <body>
-    <script>
-        const p = new URLSearchParams(window.location.search);
-        const tenant = p.get('tenant') || '';
-        const agent = p.get('agent') || '';
-        const s = document.createElement('script');
-        s.src = `/widget.js?tenant=${tenant}&agent=${agent}`;
-        document.body.appendChild(s);
-    </script>
+<div class="wrapper">
+    <div id="history">
+        <h3>Previous Questions</h3>
+    </div>
+    <div id="widget"></div>
+</div>
+<script>
+const p=new URLSearchParams(location.search);
+const tenant=p.get('tenant')||'';
+const agent=p.get('agent')||'';
+const token=localStorage.getItem('rag_auth_token');
+fetch(`/history?tenant=${tenant}&agent=${agent}&limit=25`,{headers:{'Authorization':`Bearer ${token}`}})
+ .then(r=>r.ok?r.json():[])
+ .then(list=>{
+    const h=document.getElementById('history');
+    list.forEach(item=>{const d=document.createElement('div');d.textContent=item.question;h.appendChild(d);});
+ });
+const s=document.createElement('script');
+s.src=`/widget.js?tenant=${tenant}&agent=${agent}`;
+document.getElementById('widget').appendChild(s);
+</script>
 </body>
 </html>
