--- a/static/chat.html
+++ b/static/chat.html
@@ -5,35 +5,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat</title>
     <style>
-        body, html {height:100%;margin:0;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;}
-        .wrapper{display:flex;height:100%;}
-        #history{width:250px;border-right:1px solid #ddd;overflow-y:auto;padding:10px;}
-        #widget{flex:1;position:relative;}
-        #history h3{margin-bottom:10px;font-size:16px;}
-        #history div{padding:4px 0;border-bottom:1px solid #eee;font-size:14px;}
+        body, html {height:100%;margin:0;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif; background:#f5f5f5;}
+        #chatContainer{display:flex;flex-direction:column;height:100vh;max-width:800px;margin:10px auto;border:1px solid #ccc;border-radius:8px;background:#fff;}
+        header{display:flex;align-items:center;justify-content:space-between;padding:10px;border-bottom:1px solid #ccc;background:#fafafa;}
+        #messages{flex:1;overflow-y:auto;padding:10px;}
+        .msg{margin-bottom:10px;padding:8px 12px;border-radius:8px;max-width:80%;}
+        .user{background:#1E88E5;color:#fff;margin-left:auto;}
+        .bot{background:#e0e0e0;color:#000;margin-right:auto;}
+        form{display:flex;border-top:1px solid #ccc;}
+        input[type="text"]{flex:1;padding:10px;border:none;font-size:14px;}
+        input[type="text"]:focus{outline:none;}
+        button{padding:0 16px;border:none;background:#1E88E5;color:#fff;cursor:pointer;}
+        button:hover{background:#1976D2;}
     </style>
 </head>
 <body>
-<div class="wrapper">
-    <div id="history">
-        <h3>Previous Questions</h3>
-    </div>
-    <div id="widget"></div>
+<div id="chatContainer">
+    <header>
+        <button id="backBtn">Home</button>
+        <h2 id="chatTitle">Chat</h2>
+    </header>
+    <div id="messages"></div>
+    <form id="chatForm">
+        <input id="chatInput" type="text" placeholder="Type your message..." autocomplete="off"/>
+        <button type="submit">Send</button>
+    </form>
 </div>
 <script>
-const p=new URLSearchParams(location.search);
-const tenant=p.get('tenant')||'';
-const agent=p.get('agent')||'';
+const params=new URLSearchParams(location.search);
+const tenant=params.get('tenant')||'';
+const agent=params.get('agent')||'';
 const token=localStorage.getItem('rag_auth_token');
-fetch(`/history?tenant=${tenant}&agent=${agent}&limit=25`,{headers:{'Authorization':`Bearer ${token}`}})
- .then(r=>r.ok?r.json():[])
- .then(list=>{
-    const h=document.getElementById('history');
-    list.forEach(item=>{const d=document.createElement('div');d.textContent=item.question;h.appendChild(d);});
- });
-const s=document.createElement('script');
-s.src=`/widget.js?tenant=${tenant}&agent=${agent}`;
-document.getElementById('widget').appendChild(s);
+const sessionId=sessionStorage.getItem('cq_sid')||Math.random().toString(36).slice(2);
+sessionStorage.setItem('cq_sid',sessionId);
+
+const chatTitle=document.getElementById('chatTitle');
+chatTitle.textContent=`Chat with ${agent}`;
+
+document.getElementById('backBtn').onclick=()=>{window.location.href='/user.html'};
+
+function addMessage(text,cls){
+    const div=document.createElement('div');
+    div.className='msg '+cls;
+    div.textContent=text;
+    document.getElementById('messages').appendChild(div);
+    document.getElementById('messages').scrollTop=document.getElementById('messages').scrollHeight;
+}
+
+async function loadHistory(){
+    const res=await fetch(`/history?tenant=${tenant}&agent=${agent}&limit=25`,{headers:{Authorization:`Bearer ${token}`}});
+    if(res.ok){
+        const data=await res.json();
+        data.forEach(i=>{addMessage(i.question,'user');addMessage(i.answer,'bot');});
+    }
+}
+
+async function sendMessage(msg){
+    addMessage(msg,'user');
+    const res=await fetch(`/chat?tenant=${tenant}&agent=${agent}`,{
+        method:'POST',
+        headers:{'Content-Type':'application/json','Authorization':`Bearer ${token}`,'X-Session-Id':sessionId},
+        body:JSON.stringify({messages:[{role:'user',content:msg}]})
+    });
+    if(res.ok){
+        const data=await res.json();
+        addMessage(data.reply,'bot');
+    }else{
+        addMessage('Error: '+res.status,'bot');
+    }
+}
+
+document.getElementById('chatForm').addEventListener('submit',e=>{e.preventDefault();const m=document.getElementById('chatInput');if(m.value.trim()){const t=m.value.trim();m.value='';sendMessage(t);}});
+
+loadHistory();
 </script>
 </body>
 </html>
