Revert login background colors

--- a/static/admin.html
+++ b/static/admin.html
@@ -13,8 +13,8 @@
         }
         
         :root {
-            --primary: #871c1c;
-            --primary-dark: #561212;
+            --primary: #1E88E5;
+            --primary-dark: #1976D2;
             --secondary: #4CAF50;
             --danger: #f44336;
             --warning: #FF9800;
@@ -53,7 +53,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background: linear-gradient(135deg, var(--primary), var(--primary-dark));
+            background: linear-gradient(135deg, var(--primary), var(--secondary));
         }
         
         .login-box {
