--- a/static/user.html
+++ b/static/user.html
@@ -8,8 +8,8 @@
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         :root {
-            --primary: #871c1c;
-            --primary-dark: #561212;
+            --primary: #1E88E5;
+            --primary-dark: #1976D2;
             --danger: #f44336;
             --gray-100: #f5f5f5;
             --gray-200: #e0e0e0;
@@ -31,7 +31,7 @@
             font-family: 'Spectral', serif;
         }
         .container { max-width: 1000px; margin: 0 auto; padding: 20px; }
-        .login-container { display: flex; justify-content: center; align-items: center; min-height: 100vh; background: linear-gradient(135deg, var(--primary), var(--primary-dark)); }
+        .login-container { display: flex; justify-content: center; align-items: center; min-height: 100vh; background: linear-gradient(135deg, var(--primary), #4CAF50); }
         .login-box { background: var(--white); padding: 40px; border-radius: 12px; box-shadow: var(--shadow-lg); width: 100%; max-width: 400px; }
         .login-box h2 { text-align: center; margin-bottom: 30px; color: var(--gray-800); }
         .form-group { margin-bottom: 20px; }
