style(user): set black background

--- a/static/user.html
+++ b/static/user.html
@@ -22,7 +22,7 @@
         }
         body {
             font-family: 'Inter', sans-serif;
-            background: var(--gray-100);
+            background: black;
             color: var(--gray-800);
             line-height: 1.6;
             font-size: var(--body-font-size);
