--- a/static/chat.html
+++ b/static/chat.html
@@ -4,17 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Spectral:wght@400;700&family=Satoshi:wght@400;700&display=swap">
+    <link rel="stylesheet" href="styles.css">
     <style>
-        :root {
-            --primary: #1E88E5;
-            --primary-dark: #1976D2;
-            --gray-100: #f5f5f5;
-            --gray-200: #e0e0e0;
-            --gray-700: #616161;
-            --gray-800: #424242;
-            --white: #ffffff;
-            --body-font-size: 16px;
-        }
         html,body{
             height:100%;
             margin:0;
@@ -111,11 +103,9 @@ const agent=params.get('agent')||'';
 const token=localStorage.getItem('rag_auth_token');
 const sessionId=sessionStorage.getItem('cq_sid')||Math.random().toString(36).slice(2);
 sessionStorage.setItem('cq_sid',sessionId);
-let bodyFontSize=parseInt(localStorage.getItem('body_font_size'))||16;
-function applyBodyFontSize(){
-    document.documentElement.style.setProperty('--body-font-size', bodyFontSize + 'px');
-}
-applyBodyFontSize();
+const styleDefaults={primary:"#1E88E5",primaryDark:"#1976D2",secondary:"#4CAF50",danger:"#f44336",warning:"#FF9800",bodyFontSize:16};
+function applyCustomStyles(){Object.keys(styleDefaults).forEach(k=>{const v=localStorage.getItem("style_"+k)||styleDefaults[k];if(k==="bodyFontSize"){document.documentElement.style.setProperty("--body-font-size",v+"px");}else{const cssVar="--"+k.replace(/([A-Z])/g,"-$1").toLowerCase();document.documentElement.style.setProperty(cssVar,v);}});}
+applyCustomStyles();
 let sidebarVisible=false;
 let chatHistory=[];
 let filteredHistory=[];
