--- a/static/user.html
+++ b/static/user.html
@@ -5,24 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Second Chair Login</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Spectral:wght@400;700&family=Satoshi:wght@400;700&display=swap">
+<link rel="stylesheet" href="styles.css">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        :root {
-            --primary: #1E88E5;
-            --primary-dark: #1976D2;
-            --secondary: #4CAF50;
-            --danger: #f44336;
-            --warning: #FF9800;
-            --gray-100: #f5f5f5;
-            --gray-200: #e0e0e0;
-            --gray-300: #bdbdbd;
-            --gray-600: #757575;
-            --gray-800: #424242;
-            --white: #ffffff;
-            --shadow: 0 2px 4px rgba(0,0,0,0.1);
-            --shadow-lg: 0 4px 12px rgba(0,0,0,0.15);
-            --body-font-size: 16px;
-        }
         body {
             font-family: 'Inter', sans-serif;
             background: black;
@@ -282,17 +267,9 @@
 const API_BASE = '';
 let authToken = localStorage.getItem('rag_auth_token');
 let currentUser = null;
-let bodyFontSize = parseInt(localStorage.getItem('body_font_size')) || 16;
-
-function applyBodyFontSize() {
-    document.documentElement.style.setProperty('--body-font-size', bodyFontSize + 'px');
-}
-
-applyBodyFontSize();
-
-if(authToken){
-    validateToken();
-}
+const styleDefaults={primary:"#1E88E5",primaryDark:"#1976D2",secondary:"#4CAF50",danger:"#f44336",warning:"#FF9800",bodyFontSize:16};
+function applyCustomStyles(){Object.keys(styleDefaults).forEach(k=>{const v=localStorage.getItem("style_"+k)||styleDefaults[k];if(k==="bodyFontSize"){document.documentElement.style.setProperty("--body-font-size",v+"px");}else{const cssVar="--"+k.replace(/([A-Z])/g,"-$1").toLowerCase();document.documentElement.style.setProperty(cssVar,v);}});}
+applyCustomStyles();
 
 document.getElementById('loginForm').addEventListener('submit', handleLogin);
 document.getElementById('logoutBtn').addEventListener('click', logout);
