--- a/static/user_files.html
+++ b/static/user_files.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Files</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Spectral:wght@400;700&family=Satoshi:wght@400;700&display=swap">
     <style>
         * { margin:0; padding:0; box-sizing:border-box; }
         body { font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif; background:#f5f5f5; color:#424242; line-height:1.6; padding:40px; }
@@ -37,6 +39,9 @@
     </table>
     <div id="pager" style="margin-top:10px"></div>
 <script>
+const styleDefaults={primary:"#1E88E5",primaryDark:"#1976D2",secondary:"#4CAF50",danger:"#f44336",warning:"#FF9800",bodyFontSize:16};
+function applyCustomStyles(){Object.keys(styleDefaults).forEach(k=>{const v=localStorage.getItem("style_"+k)||styleDefaults[k];if(k==="bodyFontSize"){document.documentElement.style.setProperty("--body-font-size",v+"px");}else{const cssVar="--"+k.replace(/([A-Z])/g,"-$1").toLowerCase();document.documentElement.style.setProperty(cssVar,v);}});}
+applyCustomStyles();
 const params = new URLSearchParams(window.location.search);
 const tenant = params.get('tenant');
 const agent = params.get('agent');
