Add site-wide footer

--- a/static/chat.html
+++ b/static/chat.html
@@ -245,5 +245,11 @@ document.getElementById('guideOverlay').addEventListener('click',()=>{
 
 loadHistory();
 </script>
+<footer>
+    <img src="https://www.craftedquery.com/logo.svg" alt="Crafted Query Logo"> 2025 © Crafted Query. All rights reserved. -
+    <a href="https://www.craftedquery.com/about">About us</a> -
+    <a href="https://www.craftedquery.com/contact">Contact us</a> -
+    Status.
+</footer>
 </body>
 </html>
