--- a/static/user.html
+++ b/static/user.html
@@ -596,5 +596,11 @@ document.addEventListener('DOMContentLoaded', () => {
     }
 });
 </script>
+<footer>
+    <img src="https://www.craftedquery.com/logo.svg" alt="Crafted Query Logo"> 2025 © Crafted Query. All rights reserved. -
+    <a href="https://www.craftedquery.com/about">About us</a> -
+    <a href="https://www.craftedquery.com/contact">Contact us</a> -
+    Status.
+</footer>
 </body>
 </html>
