--- a/static/user_files.html
+++ b/static/user_files.html
@@ -121,5 +121,11 @@ function changePage(delta){
 document.getElementById('sortName').addEventListener('click',()=>{sortField='name';sortAsc=!sortAsc;render();});
 document.getElementById('sortDate').addEventListener('click',()=>{sortField='date';sortAsc=!sortAsc;render();});
 </script>
+<footer>
+    <img src="https://www.craftedquery.com/logo.svg" alt="Crafted Query Logo"> 2025 © Crafted Query. All rights reserved. -
+    <a href="https://www.craftedquery.com/about">About us</a> -
+    <a href="https://www.craftedquery.com/contact">Contact us</a> -
+    Status.
+</footer>
 </body>
 </html>
