--- a/static/admin.html
+++ b/static/admin.html
@@ -2166,6 +2166,12 @@
             }, 3000);
         }
     </script>
+<footer>
+    <img src="https://www.craftedquery.com/logo.svg" alt="Crafted Query Logo"> 2025 © Crafted Query. All rights reserved. -
+    <a href="https://www.craftedquery.com/about">About us</a> -
+    <a href="https://www.craftedquery.com/contact">Contact us</a> -
+    Status.
+</footer>
 </body>
 </html>
                     
