--- a/static/user_upload.html
+++ b/static/user_upload.html
@@ -124,5 +124,11 @@ async function uploadFiles(files, replace=false){
     fileInput.value = '';
 }
 </script>
+<footer>
+    <img src="https://www.craftedquery.com/logo.svg" alt="Crafted Query Logo"> 2025 © Crafted Query. All rights reserved. -
+    <a href="https://www.craftedquery.com/about">About us</a> -
+    <a href="https://www.craftedquery.com/contact">Contact us</a> -
+    Status.
+</footer>
 </body>
 </html>
