Update admin interface title

--- a/static/admin.html
+++ b/static/admin.html
@@ -515,7 +515,7 @@
         <div class="container">
             <!-- Header -->
             <div class="header">
-                <h1>RAG Chatbot Administration</h1>
+                <h1>CQ Second Chair Administration</h1>
                 <div class="user-info">
                     <span id="userWelcome">Welcome, User!</span>
                     <button id="logoutBtn" class="btn btn-danger">Logout</button>
