Increase color picker size in styling panel

--- a/static/admin.html
+++ b/static/admin.html
@@ -408,6 +408,12 @@
             padding: 4px;
             border-radius: 4px;
         }
+
+        /* Larger color squares in Styling panel */
+        #stylingPanel input[type="color"] {
+            width: 0.5in;
+            height: 0.5in;
+        }
         
         /* Widget Configuration */
         .widget-config {
